--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div>
-            <h1><a href="/admin/">admin</a></h1>
+            <h1><a href="/admin/">admin-hai</a></h1>
         </div>
 
         <div>
